--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/buttons/buttons.css">
+    <link rel="stylesheet" href="css/headings/headings.css">
+
     <title>Portfolio</title>
 </head>
+
 <body>
-    <header class="mt-2 mx-5">
-        <nav class="navbar navbar-expand-lg sticky-top mx-5">
+    <!-- Navigation -->
+
+    <header class="mt-4 mb-5">
+        <nav class="navbar navbar-expand-lg sticky-top">
             <a class="navbar-brand" href="#home">
                 <img src="assets/logo.svg" alt="Site Logo">
             </a>
@@ -19,7 +27,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav mx-5">
+                <ul class="navbar-nav">
                     <li class="nav-item active mx-2">
                         <a class="nav-link" href="#home" id="home">Home <span class="sr-only">(current)</span></a>
                     </li>
@@ -30,7 +38,10 @@
                         <a class="nav-link" href="#projects" id="projects">Projects</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="#experience" id="experience">Experience</a>
+                        <a class="nav-link" href="#experience" id="experience">Skills</a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="#experience" id="experience">Socials</a>
                     </li>
                     <li class="nav-item mx-2">
                         <a class="nav-link" href="#contact" id="contact">Contact</a>
@@ -39,5 +50,149 @@
             </div>
         </nav>
     </header>
+
+    <!-- Navigation -->
+
+    <!-- Main -->
+
+    <main>
+        <div class="container mb-5">
+            <div class="row">
+                <div class="col mr-5">
+                    <h1>
+                        Hi,<br> I'm Anja
+                    </h1>
+                    <h2 id="colored">Lorem Ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac turpis nec sapien finibus
+                        pulvinar vel vitae magna. Proin ornare mauris et ligula ornare tincidunt. </p>
+                    <button class="btn--primary">
+                        Contact Me
+                    </button>
+                </div>
+                <div class="col ml-5">
+                    <img src="assets/main-image.png" alt="Ilustrated Computer" id="main-image" />
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- Main -->
+
+    <!-- Cards -->
+
+    <section class="mt-5 mb-5">
+        <h2 class="text-center mb-5">My Projects</h2>
+        <div class="container card__container justify-content-center">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+
+            <div class="card mx-5" style="width: 18rem;">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="..." alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Cards -->
+
+    <!-- Spliter Section -->
+
+    <section class="skills">
+        <div class="container container text-center d-flex flex-column pt-5 pb-5">
+            <div class="row">
+                <div class="col-sm">
+                    <img src="assets/icons/html.svg" alt="HTML" />
+                </div>
+                <div class="col-sm">
+                    <img src="assets/icons/css.svg" alt="CSS" />
+                </div>
+                <div class="col-sm">
+                    <img src="assets/icons/javascript.svg" alt="JavaScript" />
+                </div>
+                <div class="col-sm">
+                    <img src="assets/icons/react.svg" alt="React JavaScript" />
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Spliter Section -->
+
+
+    <section>
+        <div class="container mb-5 mt-5 mb-5">
+            <div class="row">
+                <div class="col mr-1">
+                    <form>
+                        <div class="mb-3">
+                            <h3>Get In <span id="colored">Touch</span></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In molestiae et eligendi
+                                distinctio quaerat excepturi?</p>
+                            <label for="inputName" class="form-label" placeholder="Name">Name</label>
+                            <input type="name" class="form-control" id="inputName1" aria-describedby="emailHelp">
+                        </div>
+                        <div class="mb-3">
+                            <label for="inputSurname" class="form-label">Surname</label>
+                            <input type="surname" class="form-control" id="inputSurname1">
+                        </div>
+                        <div class="mb-3">
+                            <label for="inputEmailAddress" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="inputEmail1">
+                        </div>
+                        <div class="mb-3">
+                            <label for="inputPhoneNumber" class="form-label">Phone Number</label>
+                            <input type="number" class="form-control" id="inputPhoneNumber1">
+                        </div>
+
+                        <button type="submit" class="btn btn--primary btn--primary--xl">Submit</button>
+                    </form>
+                </div>
+                <div class="col ml-1">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2793.5792911515173!2d18.678333475979738!3d45.55878812712301!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475ce7a607148fa3%3A0x3f0cc9e48a295957!2sFaculty%20of%20Humanities%20and%20Social%20Sciences%2C%20University%20of%20Osijek!5e0!3m2!1sen!2shr!4v1692380882840!5m2!1sen!2shr"
+                        width="500" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+    </section>
+
+    <footer class="py-1 pt-5 pb-5">
+        <div class="container">
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Projects</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Skills</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Socials</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Contact</a></li>
+            </ul>
+            <p class="text-center text-body-secondary">&copy; 2023 Anja Labak, FFOS</p>
+        </div>
+    </footer>
+
+
 </body>
+
 </html>
