Project section update

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
 <body>
     <!-- Navigation -->
 
-    <header class="mt-4 mb-5">
+    <header class="mt-4 mb-5" id="navigation">
         <nav class="navbar navbar-expand-lg sticky-top">
-            <a class="navbar-brand" href="#home">
+            <a class="navbar-brand" href="#navigation">
                 <img src="assets/logo.svg" alt="Site Logo">
             </a>
             </img>
@@ -84,32 +84,29 @@
         <h2 class="text-center mb-5">My Projects</h2>
         <div class="container card__container justify-content-center">
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="assets/project-one.png" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">All Product Pack</h5>
+                    <p class="card-text">The All Products Pack serves as the landing page for the JetBrains website, showcasing their range of software products and services. Test assignment.</p>
+                    <a href="#" class="btn btn--primary--xl">View More</a>
                 </div>
             </div>
 
             <div class="card mx-5" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="assets/project-two.png" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Automated Screenshot Generator</h5>
+                    <p class="card-text">Node.js script that takes screenshots of websites and uploads them to a Google Drive using the Google Drive API.</p>
+                    <a href="#" class="btn btn--primary--xl">View More</a>
                 </div>
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="assets/project-three.png" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Events</h5>
+                    <p class="card-text">Events website design that consists of a front page that includes the names of popular events.</p>
+                    <a href="#" class="btn btn--primary--xl">View More</a>
                 </div>
             </div>
         </div>
