--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,27 @@
 
     <!-- Main -->
 
+    <!-- About -->
+
+    <section>
+        <div class="container">
+            <div class="row">
+              <div class="col mx-5">
+                <img src="#">
+              </div>
+              <div class="col">
+                <h3>About Me</h3>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est quod numquam commodi? Veniam ab inventore, earum perspiciatis maxime, quia quidem dolore nobis sit aperiam tempore beatae rem autem harum numquam odit fugit animi, ipsam voluptates est non eaque tempora quaerat sed. Vero impedit aspernatur asperiores praesentium quo, atque voluptatem maxime provident ducimus deserunt consequuntur minima in aliquid, libero corporis animi nulla ullam earum iusto ipsa placeat aliquam nisi cupiditate. Saepe suscipit delectus corrupti explicabo ducimus aut similique corporis ad alias cumque? Tempora, sit odio dignissimos autem illum molestias cumque rem.
+                </p>
+            </div>
+            </div>
+          </div>
+    </section>
+
+
+    <!-- About -->
+
     <!-- Cards -->
 
     <section class="mt-5 mb-5">
