--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
 <body>
     <!-- Navigation -->
 
-    <header class="mt-4 mb-5" id="navigation">
-        <nav class="navbar navbar-expand-lg sticky-top">
+    <header class="mt-4" id="navigation">
+        <nav class="navbar navbar-expand-lg sticky-top spc-5">
             <a class="navbar-brand" href="#navigation">
                 <img src="assets/logo.svg" alt="Site Logo">
             </a>
@@ -56,21 +56,21 @@
     <!-- Main -->
 
     <main>
-        <div class="container mb-5">
-            <div class="row">
+        <div class="container justify-content-center mb-5">
+            <div class="row align-items-center spc-5">
                 <div class="col mr-5">
                     <h1>
                         Hi,<br> I'm Anja
                     </h1>
-                    <h2 id="colored">Lorem Ipsum</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac turpis nec sapien finibus
-                        pulvinar vel vitae magna. Proin ornare mauris et ligula ornare tincidunt. </p>
+                    <h2 id="colored">UI Developer</h2>
+                    <p>A passionate UI developer with a deep-rooted love for creating engaging and
+                        user-friendly digital experiences. </p>
                     <button class="btn--primary">
                         Contact Me
                     </button>
                 </div>
                 <div class="col ml-5">
-                    <img src="assets/main-image.png" alt="Ilustrated Computer" id="main-image" />
+                    <img src="assets/girl-code-css-html.png" alt="Ilustrated Computer" id="main-image" />
                 </div>
             </div>
         </div>
@@ -80,20 +80,26 @@
 
     <!-- About -->
 
-    <section>
-        <div class="container">
-            <div class="row">
-              <div class="col mx-5">
-                <img src="#">
-              </div>
-              <div class="col">
-                <h3>About Me</h3>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est quod numquam commodi? Veniam ab inventore, earum perspiciatis maxime, quia quidem dolore nobis sit aperiam tempore beatae rem autem harum numquam odit fugit animi, ipsam voluptates est non eaque tempora quaerat sed. Vero impedit aspernatur asperiores praesentium quo, atque voluptatem maxime provident ducimus deserunt consequuntur minima in aliquid, libero corporis animi nulla ullam earum iusto ipsa placeat aliquam nisi cupiditate. Saepe suscipit delectus corrupti explicabo ducimus aut similique corporis ad alias cumque? Tempora, sit odio dignissimos autem illum molestias cumque rem.
-                </p>
+    <section class="spc-5">
+        <div class="container container__about">
+            <div class="row align-items-center spc">
+                <div class="col my-5">
+                    <img src="assets/girl-checklist-code-tech.png" alt="Illustration Girl Code HTML CSS">
+                </div>
+                <div class="col mx-5">
+                    <h3>About Me</h3>
+                    <p>
+                        With a solid foundation in HTML, CSS, and JavaScript, I bring websites to life with interactive
+                        and visually appealing elements. My proficiency in React allows me to craft dynamic and
+                        efficient user interfaces that leave a lasting impression. In addition, my grasp of PHP empowers
+                        me to develop functional and feature-rich web applications. Each project I undertake is a
+                        chance to combine my technical expertise with my creative flair, resulting in websites that not
+                        only meet but exceed expectations.
+                        Let's collaborate and turn your digital visions into captivating realities.
+                    </p>
+                </div>
             </div>
-            </div>
-          </div>
+        </div>
     </section>
 
 
@@ -101,33 +107,42 @@
 
     <!-- Cards -->
 
-    <section class="mt-5 mb-5">
+    <section class="mt-5 mb-5 spc-5">
         <h2 class="text-center mb-5">My Projects</h2>
         <div class="container card__container justify-content-center">
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="assets/project-one.png" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">All Product Pack</h5>
-                    <p class="card-text">The All Products Pack serves as the landing page for the JetBrains website, showcasing their range of software products and services. Test assignment.</p>
-                    <a href="#" class="btn btn--primary--xl">View More</a>
+            <div class="row spc-5">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="assets/project-one.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">All Product Pack</h5>
+                        <p class="card-text">The All Products Pack serves as the landing page for the JetBrains website,
+                            showcasing their range of software products and services. Test assignment.</p>
+                        <a href="#" class="btn btn--primary--xl">View More</a>
+                    </div>
                 </div>
-            </div>
 
-            <div class="card mx-5" style="width: 18rem;">
-                <img class="card-img-top" src="assets/project-two.png" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Automated Screenshot Generator</h5>
-                    <p class="card-text">Node.js script that takes screenshots of websites and uploads them to a Google Drive using the Google Drive API.</p>
-                    <a href="#" class="btn btn--primary--xl">View More</a>
+                <div class="card mx-5" style="width: 18rem;">
+                    <img class="card-img-top" src="assets/project-two.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Automated Screenshot Generator</h5>
+                        <p class="card-text">Node.js script that takes screenshots of websites and uploads them to a
+                            Google
+                            Drive using the Google Drive API.</p>
+                        <a href="#" class="btn btn--primary--xl">View More</a>
+                    </div>
                 </div>
-            </div>
-
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="assets/project-three.png" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Events</h5>
-                    <p class="card-text">Events website design that consists of a front page that includes the names of popular events.</p>
-                    <a href="#" class="btn btn--primary--xl">View More</a>
+                <div class="card" style="width: 18rem;">
+                    <div class="corner-image">
+                        <img src="assets/sparks-right-alignment.svg" alt="Small Picture">
+                    </div>
+                    <img class="card-img-top" src="assets/project-three.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Events</h5>
+                        <p class="card-text">Events website design that consists of a front page that includes the names
+                            of
+                            popular events.</p>
+                        <a href="#" class="btn btn--primary--xl">View More</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -137,9 +152,9 @@
 
     <!-- Spliter Section -->
 
-    <section class="skills">
+    <section class="skills spc-5">
         <div class="container container text-center d-flex flex-column pt-5 pb-5">
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-sm">
                     <img src="assets/icons/html.svg" alt="HTML" />
                 </div>
@@ -161,13 +176,12 @@
 
     <section>
         <div class="container mb-5 mt-5 mb-5">
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col mr-1">
                     <form>
                         <div class="mb-3">
                             <h3>Get In <span id="colored">Touch</span></h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In molestiae et eligendi
-                                distinctio quaerat excepturi?</p>
+                            <p>Let's collaborate and turn your digital visions into captivating realities.</p>
                             <label for="inputName" class="form-label" placeholder="Name">Name</label>
                             <input type="name" class="form-control" id="inputName1" aria-describedby="emailHelp">
                         </div>
@@ -180,8 +194,8 @@
                             <input type="email" class="form-control" id="inputEmail1">
                         </div>
                         <div class="mb-3">
-                            <label for="inputPhoneNumber" class="form-label">Phone Number</label>
-                            <input type="number" class="form-control" id="inputPhoneNumber1">
+                            <label for="exampleFormControlTextarea1">Leave Me a Message</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                         </div>
 
                         <button type="submit" class="btn btn--primary btn--primary--xl">Submit</button>
@@ -194,6 +208,25 @@
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
+    </section>
+
+    <section class="socials__container">
+        <div class="container text-center pt-5 pb-5">
+            <div class="row align-items-center">
+                <div class="col-sm">
+                    <img src="assets/icons/github-logo.svg" alt="HTML" />
+                </div>
+                <div class="col-sm">
+                    <img src="assets/icons/linkedin-logo.svg" alt="HTML" />
+                </div>
+                <div class="col-sm">
+                    <img src="assets/icons/instagram-logo.svg" alt="HTML" />
+                </div>
+                <div class="col-sm">
+                    <img src="assets/icons/facebook-logo.svg" alt="HTML" />
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer class="py-1 pt-5 pb-5">
