--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,14 @@
 
 <body>
     <!-- Navigation -->
-
     <header class="mt-4" id="navigation">
+        <div class="corner-image--top-left">
+            <img src="assets/rectangle.svg" alt="Small Picture">
+        </div>
         <nav class="navbar navbar-expand-lg sticky-top spc-5">
+        
             <a class="navbar-brand" href="#navigation">
-                <img src="assets/logo.svg" alt="Site Logo">
+
             </a>
             </img>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -132,7 +135,7 @@
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
-                    <div class="corner-image">
+                    <div class="corner-image--right">
                         <img src="assets/sparks-right-alignment.svg" alt="Small Picture">
                     </div>
                     <img class="card-img-top" src="assets/project-three.png" alt="Card image cap">
@@ -153,8 +156,11 @@
     <!-- Spliter Section -->
 
     <section class="skills spc-5">
-        <div class="container container text-center d-flex flex-column pt-5 pb-5">
+        <div class="container-fluid text-center d-flex flex-column pt-5 pb-5">
             <div class="row align-items-center">
+                <div class="col skills__col--first">
+                    Bringing websites to life with newest technology
+                </div>
                 <div class="col-sm">
                     <img src="assets/icons/html.svg" alt="HTML" />
                 </div>
@@ -175,11 +181,14 @@
 
 
     <section>
-        <div class="container mb-5 mt-5 mb-5">
+        <div class="container mb-5 mt-5 mb-5 container__form">
             <div class="row align-items-center">
                 <div class="col mr-1">
                     <form>
                         <div class="mb-3">
+                            <div class="corner-image--left">
+                                <img src="assets/sparks-left-alignment.svg" alt="Small Picture">
+                            </div>
                             <h3>Get In <span id="colored">Touch</span></h3>
                             <p>Let's collaborate and turn your digital visions into captivating realities.</p>
                             <label for="inputName" class="form-label" placeholder="Name">Name</label>
