--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             <img src="assets/rectangle.svg" alt="Small Picture">
         </div>
         <nav class="navbar navbar-expand-lg sticky-top spc-5">
-        
+                    <img src="assets/logo.svg" alt="Small Picture">
             <a class="navbar-brand" href="#navigation">
 
             </a>
